--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
      <div class="container">
      <div class="header"></div>
+     <div class="content"></div>
      </div>
 </body>
 </html>
