--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
 <body>
      <div class="container">
      <div class="header"></div>
-     <div class="content"></div>
+     <div class="content">
+        <button> AC </button>
+        <button> √ </button>
+        <button> % </button>
+        <button class="operator"> ÷ </button>
+        <button> 7 </button>
+        <button> 8 </button>
+        <button> 9 </button>
+        <button class="operator"> × </button>
+        <button> 4 </button>
+        <button> 5 </button>
+        <button> 6 </button>
+        <button class="operator"> - </button>
+        <button> 1 </button>
+        <button> 2 </button>
+        <button> 3 </button>
+        <button class="operator"> + </button>
+        <button> 0 </button>
+        <button> . </button>
+        <button> +/- </button>
+        <button class="operator"> = </button>
+     </div>
      </div>
 </body>
 </html>
