--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="javascript"></script>
 </head>
 <body>
-    <div class="container">
+     <div class="container">
         <div class="header"></div>
         <div class="content">
             <button> AC </button>
